--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -124,7 +124,7 @@ textarea:focus {
 
 /* Common CSS End */
 .main-wrapper {
-    margin-top: 50px;
+    margin-top: 120px;
 }
 
 .login-form {
@@ -183,6 +183,14 @@ textarea:focus {
     text-align: center;
     vertical-align: top;
     border-radius: 4px;
+    background-color: #e1e1e1;
+}
+
+.user-avatar span {
+    font-size: 22px;
+    font-weight: 700;
+    color: #b6b6b6;
+    line-height: 45px;
 }
 
 .user-avatar img {
@@ -333,17 +341,72 @@ textarea:focus {
     border-top: 1px solid #eee;
 }
 
-.comment-block{
-    padding:15px;
+.comment-block {
+    padding: 15px;
 }
 
-.comment-block .comment{
+.comment-block .comment {
     resize: none;
-    border:0;
+    border: 0;
 }
 
+.has-danger {
+    position: relative;
+}
+.has-error {
+    color: red;
+    font-size: small;
+    position: absolute;
+    line-height: normal;
+}
 
+.or {
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 5px;
+}
+.or p {
+    margin: 0;
+}
 
+.guest-login {
+    text-align: center;
+}
+.guest-login a:hover {
+    text-decoration: none;
+    color: #000;
+}
+.btn-block {
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.card-text label {
+    margin-bottom: 0;
+}
+
+.already-account p {
+    margin-bottom: 0;
+}
+.user-profile {
+    display: flex;   
+    width: 210px;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+}
+.user-profile .username {
+    margin-top: 0; 
+}
+.btn-logout {
+    padding: 5px 10px;
+    line-height: normal;
+    margin-top: 5px;
+}
 /* responsive */
 
 @media (min-width: 768px) {
