--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -470,6 +470,44 @@ textarea:focus {
     line-height: normal;
     margin-top: 5px;
 }
+
+
+.not-found-box {
+    height: calc(100vh - 65px);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+.not-found-box .not-found-box-inner {
+    min-width: 500px;
+    text-align: center;
+    padding: 40px;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+}
+.not-found-box .not-found-box-inner img {
+    width: 200px;
+    margin-bottom: 30px;
+    opacity: 0.4;
+}
+.not-found-box .not-found-box-inner h2 {
+    font-size: 72px;
+    margin: 0;
+    color: #ea4135;
+    line-height: 72px;
+}
+.not-found-box .not-found-box-inner h3 {
+    margin: 0;
+    font-size: 24px;
+    color: #424242;
+}
 /* responsive */
 
 @media (min-width: 768px) {
